--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
 
+  <!-- Header -->
   <header id="top">
     <nav class="top-nav">
       <a href="#top">Home</a>
@@ -20,6 +21,7 @@
     </div>
   </header>
 
+  <!-- About -->
   <section id="about" class="about">
     <div class="about-container">
       <div class="about-photo">
@@ -41,6 +43,7 @@
     </div>
   </section>
 
+  <!-- Projects -->
   <section id="projects" class="projects container">
     <h2 class="projects-title">Projects</h2>
     <div class="projects-grid">
@@ -61,14 +64,20 @@
     </div>
   </section>
 
+  <!-- Contact -->
   <section id="contact" class="contact container">
     <h2 class="contact-title">Contact</h2>
     <div class="contact-details">
       <p>Email: <a href="mailto:your.email@example.com">your.email@example.com</a></p>
-      <p>LinkedIn: <a href="https://linkedin.com/in/yourprofile">yourprofile</a></p>
-      <p>Instagram: <a href="https://instagram.com/yourprofile">yourprofile</a></p>
+      <p>LinkedIn: <a href="https://linkedin.com/in/yourprofile" target="_blank">yourprofile</a></p>
+      <p>Instagram: <a href="https://instagram.com/yourprofile" target="_blank">@yourprofile</a></p>
     </div>
   </section>
+
+  <!-- Footer -->
+  <footer>
+    <p>© 2025 Karl. All rights reserved.</p>
+  </footer>
 
   <script>
     window.addEventListener("scroll", function() {
@@ -76,10 +85,6 @@
       nav.classList.toggle("scrolled", window.scrollY > 50);
     });
   </script>
-
-  <footer>
-    <p>© 2025 Karl. All rights reserved.</p>
-  </footer>
 
 </body>
 </html>
