--- a/index.html
+++ b/index.html
@@ -7,8 +7,6 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-
-  <!-- Header -->
   <header id="top">
     <nav class="top-nav">
       <a href="#top">Home</a>
@@ -21,7 +19,6 @@
     </div>
   </header>
 
-  <!-- About -->
   <section id="about" class="about">
     <div class="about-container">
       <div class="about-photo">
@@ -36,14 +33,12 @@
           My strengths include brainstorming, analyzing, and collaborating with a team. I have consistently shown my leadership skills since my elementary years, and alongside these skills, I remain committed to my academics. In senior high school, I graduated with high honors, and in college, I have been a consistent President’s Lister where I maintained a GWA of 1.11 in my sophomore year.
         </p>
         <p>
-          These are just a glimpse of my skills and experiences. If you’d like to know more about what I’ve done so far, you can check out my full 
-          <a href="#cv" class="cv-link">Curriculum Vitae</a>.
+          These are just a glimpse of my skills and experiences. If you’d like to know more about what I’ve done so far, you can check out my full <a href="#cv" class="cv-link">Curriculum Vitae</a>.
         </p>
       </div>
     </div>
   </section>
 
-  <!-- Projects -->
   <section id="projects" class="projects container">
     <h2 class="projects-title">Projects</h2>
     <div class="projects-grid">
@@ -51,12 +46,10 @@
         <h3>Writing</h3>
         <p>My written works: essays and poems.</p>
       </a>
-
       <a href="artworks.html" class="project-card">
         <h3>Artwork</h3>
         <p>Drawings, both digital and traditional.</p>
       </a>
-
       <a href="#" class="project-card">
         <h3>Designs</h3>
         <p>Publication materials and creative PowerPoints.</p>
@@ -64,20 +57,14 @@
     </div>
   </section>
 
-  <!-- Contact -->
   <section id="contact" class="contact container">
     <h2 class="contact-title">Contact</h2>
     <div class="contact-details">
       <p>Email: <a href="mailto:your.email@example.com">your.email@example.com</a></p>
-      <p>LinkedIn: <a href="https://linkedin.com/in/yourprofile" target="_blank">yourprofile</a></p>
-      <p>Instagram: <a href="https://instagram.com/yourprofile" target="_blank">@yourprofile</a></p>
+      <p>LinkedIn: <a href="https://linkedin.com/in/yourprofile">yourprofile</a></p>
+      <p>Instagram: <a href="https://instagram.com/yourprofile">yourprofile</a></p>
     </div>
   </section>
-
-  <!-- Footer -->
-  <footer>
-    <p>© 2025 Karl. All rights reserved.</p>
-  </footer>
 
   <script>
     window.addEventListener("scroll", function() {
@@ -86,5 +73,8 @@
     });
   </script>
 
+  <footer>
+    <p>© 2025 Karl. All rights reserved.</p>
+  </footer>
 </body>
 </html>
