--- a/artworks.html
+++ b/artworks.html
@@ -20,7 +20,7 @@
       <a href="images/pearl.jpg" target="_blank">
         <img src="images/pearl.jpg" alt="Digital painting: Pearl">
       </a>
-      <a href="images/art2.jpg" target="_blank">
+      <a href="images/marymagdalene.jpg" target="_blank">
         <img src="images/art2.jpg" alt="Traditional sketch in pencil">
       </a>
       <a href="images/art3.jpg" target="_blank">
