--- a/artworks.html
+++ b/artworks.html
@@ -23,7 +23,7 @@
       <a href="images/marymagdalene.jpg" target="_blank">
         <img src="images/art2.jpg" alt="Traditional sketch in pencil">
       </a>
-      <a href="images/art3.jpg" target="_blank">
+      <a href="images/human.jpg" target="_blank">
         <img src="images/art3.jpg" alt="Digital illustration">
       </a>
       <a href="images/art4.jpg" target="_blank">
