--- a/artworks.html
+++ b/artworks.html
@@ -21,10 +21,10 @@
         <img src="images/pearl.jpg" alt="Digital painting: Pearl">
       </a>
       <a href="images/marymagdalene.jpg" target="_blank">
-        <img src="images/art2.jpg" alt="Traditional sketch in pencil">
+        <img src="images/marymagdalene.jpg" alt="Traditional sketch in pencil">
       </a>
       <a href="images/human.jpg" target="_blank">
-        <img src="images/art3.jpg" alt="Digital illustration">
+        <img src="images/human.jpg" alt="Digital illustration">
       </a>
       <a href="images/art4.jpg" target="_blank">
         <img src="images/art4.jpg" alt="Traditional watercolor piece">
