--- a/artworks.html
+++ b/artworks.html
@@ -26,8 +26,8 @@
       <a href="images/human.jpg" target="_blank">
         <img src="images/human.jpg" alt="Digital illustration">
       </a>
-      <a href="images/art4.jpg" target="_blank">
-        <img src="images/art4.jpg" alt="Traditional watercolor piece">
+      <a href="images/theboyismine.jpg" target="_blank">
+        <img src="images/theboyismine.jpg" alt="Traditional watercolor piece">
       </a>
     </div>
   </main>
