--- a/artworks.html
+++ b/artworks.html
@@ -29,6 +29,18 @@
       <a href="images/theboyismine.jpg" target="_blank">
         <img src="images/theboyismine.jpg" alt="Traditional watercolor piece">
       </a>
+      <a href="images/danas.jpg" target="_blank">
+        <img src="images/danas.jpg" alt="Digital painting: Pearl">
+      </a>
+      <a href="images/marymagdalene.jpg" target="_blank">
+        <img src="images/marymagdalene.jpg" alt="Traditional sketch in pencil">
+      </a>
+      <a href="images/human.jpg" target="_blank">
+        <img src="images/human.jpg" alt="Digital illustration">
+      </a>
+      <a href="images/theboyismine.jpg" target="_blank">
+        <img src="images/theboyismine.jpg" alt="Traditional watercolor piece">
+      </a>
     </div>
   </main>
 
