--- a/artworks.html
+++ b/artworks.html
@@ -32,8 +32,8 @@
       <a href="images/danas.jpg" target="_blank">
         <img src="images/danas.jpg" alt="Digital painting: Pearl">
       </a>
-      <a href="images/marymagdalene.jpg" target="_blank">
-        <img src="images/marymagdalene.jpg" alt="Traditional sketch in pencil">
+      <a href="images/qualityeducation.jpg" target="_blank">
+        <img src="images/qualityeducation.jpg" alt="Traditional sketch in pencil">
       </a>
       <a href="images/human.jpg" target="_blank">
         <img src="images/human.jpg" alt="Digital illustration">
