--- a/artworks.html
+++ b/artworks.html
@@ -35,8 +35,8 @@
       <a href="images/qualityeducation.jpg" target="_blank">
         <img src="images/qualityeducation.jpg" alt="Traditional sketch in pencil">
       </a>
-      <a href="images/human.jpg" target="_blank">
-        <img src="images/human.jpg" alt="Digital illustration">
+      <a href="images/yumeko.jpg" target="_blank">
+        <img src="images/yumeko.jpg" alt="Digital illustration">
       </a>
       <a href="images/theboyismine.jpg" target="_blank">
         <img src="images/theboyismine.jpg" alt="Traditional watercolor piece">
