--- a/artworks.html
+++ b/artworks.html
@@ -38,8 +38,8 @@
       <a href="images/yumeko.jpg" target="_blank">
         <img src="images/yumeko.jpg" alt="Digital illustration">
       </a>
-      <a href="images/theboyismine.jpg" target="_blank">
-        <img src="images/theboyismine.jpg" alt="Traditional watercolor piece">
+      <a href="images/artcommission.jpg" target="_blank">
+        <img src="images/artcommission.jpg" alt="Traditional watercolor piece">
       </a>
     </div>
   </main>
