--- a/artworks.html
+++ b/artworks.html
@@ -7,6 +7,9 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
+  
+  <!-- Back Button -->
+  <a href="index.html" class="back-button">← Back</a>
 
   <!-- Banner -->
   <header class="gallery-header">
