--- a/index.html
+++ b/index.html
@@ -60,9 +60,8 @@
   <section id="contact" class="contact container">
     <h2 class="contact-title">Contact</h2>
     <div class="contact-details">
-      <p>Email: <a href="mailto:your.email@example.com">your.email@example.com</a></p>
-      <p>LinkedIn: <a href="https://linkedin.com/in/yourprofile">yourprofile</a></p>
-      <p>Instagram: <a href="https://instagram.com/yourprofile">yourprofile</a></p>
+      <p>Email: <a href="mailto:karllexterdulce@gmail.com">karllexterdulce@gmail.com</a></p>
+      <p>LinkedIn: <a href="https://www.linkedin.com/in/karl-dulce-276a59287/">karl-dulce-276a59287</a></p>
     </div>
   </section>
 
