--- a/index.html
+++ b/index.html
@@ -58,12 +58,12 @@
   </section>
 
   <section id="contact" class="contact container">
-    <h2 class="contact-title">Contact</h2>
-    <div class="contact-details">
-      <p>Email: <a href="mailto:karllexterdulce@gmail.com">karllexterdulce@gmail.com</a></p>
-      <p>LinkedIn: <a href="https://www.linkedin.com/in/karl-dulce-276a59287/">karl-dulce-276a59287</a></p>
-    </div>
-  </section>
+  <h2 class="contact-title">Contact</h2>
+  <div class="contact-details">
+    <p>Email: <a href="mailto:karllexterdulce@gmail.com">karllexterdulce@gmail.com</a></p>
+    <p>LinkedIn: <a href="https://www.linkedin.com/in/karl-dulce-276a59287/" target="_blank">Karl Dulce</a></p>
+  </div>
+</section>
 
   <script>
     window.addEventListener("scroll", function() {
