--- a/artworks.html
+++ b/artworks.html
@@ -9,7 +9,7 @@
 <body>
   
   <!-- Back Button -->
-  <a href="index.html" class="back-button">←  Back</a>
+  <a href="index.html" class="back-button">Back</a>
 
   <!-- Banner -->
   <header class="gallery-header">
