--- a/cv.html
+++ b/cv.html
@@ -1,1 +1,25 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Karl's Curriculum Vitae</title>
+  <link rel="stylesheet" href="style.css">
+</head>
+<body>
+  <header class="cv-header">
+    <a href="index.html" class="back-button">← Back</a>
+    <h1>Curriculum Vitae</h1>
+  </header>
 
+  <section class="cv-section">
+    <div class="cv-container">
+      <img src="images/curriculumvitae.jpg" alt="Karl's Curriculum Vitae">
+    </div>
+  </section>
+
+  <footer>
+    <p>© 2025 Karl. All rights reserved.</p>
+  </footer>
+</body>
+</html>
