--- a/cv.html
+++ b/cv.html
@@ -3,23 +3,23 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Karl's Curriculum Vitae</title>
+  <title>Curriculum Vitae</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <header class="cv-header">
-    <a href="index.html" class="back-button">← Back</a>
-    <h1>Curriculum Vitae</h1>
-  </header>
 
-  <section class="cv-section">
-    <div class="cv-container">
-      <img src="images/curriculumvitae.jpg" alt="Karl's Curriculum Vitae">
-    </div>
+  <!-- Back Button -->
+  <a href="index.html" class="back-button">← Back</a>
+
+  <!-- CV Section -->
+  <section class="cv-container">
+    <img src="images/curriculumvitae.jpg" alt="Curriculum Vitae">
   </section>
 
+  <!-- Footer -->
   <footer>
-    <p>© 2025 Karl. All rights reserved.</p>
+    <p>&copy; 2025 Karl Lexter Dulce. All rights reserved.</p>
   </footer>
+
 </body>
 </html>
