--- a/cv.html
+++ b/cv.html
@@ -13,8 +13,8 @@
 
   <!-- CV Section -->
   <section class="cv-container">
-    <img src="images/curriculumvitae1.jpg" alt="Curriculum Vitae Page 1">
-    <img src="images/curriculumvitae2.jpg" alt="Curriculum Vitae Page 2">
+    <img src="images/cv-page1.jpg" alt="Curriculum Vitae Page 1">
+    <img src="images/cv-page2.jpg" alt="Curriculum Vitae Page 2">
   </section>
 
   <!-- Footer -->
