--- a/cv.html
+++ b/cv.html
@@ -13,8 +13,7 @@
 
   <!-- CV Section -->
   <section class="cv-container">
-    <img src="images/cv-page1.jpg" alt="Curriculum Vitae Page 1">
-    <img src="images/cv-page2.jpg" alt="Curriculum Vitae Page 2">
+    <img src="images/curriculumvitae.jpg" alt="Curriculum Vitae">
   </section>
 
   <!-- Footer -->
