--- a/cv.html
+++ b/cv.html
@@ -13,9 +13,8 @@
 
   <!-- CV Section -->
   <section class="cv-container">
-    <img src="images/curriculumvitae1.jpg" alt="Curriculum Vitae Page 1">
-    <img src="images/curriculumvitae2.jpg" alt="Curriculum Vitae Page 2">
-  </section>
+  <embed src="images/cv.pdf" type="application/pdf" width="100%" height="800px" />
+</section>
 
   <!-- Footer -->
   <footer>
