--- a/cv.html
+++ b/cv.html
@@ -13,7 +13,14 @@
 
   <!-- CV Section -->
   <section class="cv-container">
-  <embed src="images/cv.pdf" type="application/pdf" width="100%" height="800px" />
+  <div class="cv-grid">
+    <a href="images/cv-page1.jpg" target="_blank">
+      <img src="images/cv-page1.jpg" alt="Curriculum Vitae Page 1">
+    </a>
+    <a href="images/cv-page2.jpg" target="_blank">
+      <img src="images/cv-page2.jpg" alt="Curriculum Vitae Page 2">
+    </a>
+  </div>
 </section>
 
   <!-- Footer -->
