--- a/cv.html
+++ b/cv.html
@@ -13,15 +13,9 @@
 
   <!-- CV Section -->
   <section class="cv-container">
-  <div class="cv-grid">
-    <a href="images/cv-page1.jpg" target="_blank">
-      <img src="images/cv-page1.jpg" alt="Curriculum Vitae Page 1">
-    </a>
-    <a href="images/cv-page2.jpg" target="_blank">
-      <img src="images/cv-page2.jpg" alt="Curriculum Vitae Page 2">
-    </a>
-  </div>
-</section>
+    <img src="images/curriculumvitae1.jpg" alt="Curriculum Vitae Page 1">
+    <img src="images/curriculumvitae2.jpg" alt="Curriculum Vitae Page 2">
+  </section>
 
   <!-- Footer -->
   <footer>
