--- a/cv.html
+++ b/cv.html
@@ -13,9 +13,15 @@
 
   <!-- CV Section -->
   <section class="cv-container">
-    <img src="C:\Users\Alykayce\Downloads\New Volume/curriculumvitae1.jpg" alt="Curriculum Vitae Page 1">
-    <img src="C:\Users\Alykayce\Downloads\New Volume/curriculumvitae2.jpg" alt="Curriculum Vitae Page 2">
-  </section>
+  <div class="cv-grid">
+    <a href="images/curriculumvitae1.jpg" target="_blank">
+      <img src="images/curriculumvitae1.jpg" alt="Curriculum Vitae Page 1">
+    </a>
+    <a href="images/curriculumvitae2.jpg" target="_blank">
+      <img src="images/curriculumvitae2.jpg" alt="Curriculum Vitae Page 2">
+    </a>
+  </div>
+</section>
 
   <!-- Footer -->
   <footer>
