--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
           My strengths include brainstorming, analyzing, and collaborating with a team. I have consistently shown my leadership skills since my elementary years, and alongside these skills, I remain committed to my academics. In senior high school, I graduated with high honors, and in college, I have been a consistent President’s Lister where I maintained a GWA of 1.11 in my sophomore year.
         </p>
         <p>
-          These are just a glimpse of my skills and experiences. If you’d like to know more about what I’ve done so far, you can check out my full <a href="cv.html" class="cv-link">Curriculum Vitae</a>.
+          These are just a glimpse of my skills and experiences. If you’d like to know more about what I’ve done so far, you can check out my full <a href="#cv" class="cv-link">Curriculum Vitae</a>.
         </p>
       </div>
     </div>
@@ -57,13 +57,26 @@
     </div>
   </section>
 
+  <!-- ===== Curriculum Vitae Section ===== -->
+  <section id="cv" class="cv-section">
+    <h2 class="cv-title">Curriculum Vitae</h2>
+    <div class="cv-grid">
+      <a href="images/cv-page1.jpg" target="_blank">
+        <img src="images/cv-page1.jpg" alt="Curriculum Vitae Page 1">
+      </a>
+      <a href="images/cv-page2.jpg" target="_blank">
+        <img src="images/cv-page2.jpg" alt="Curriculum Vitae Page 2">
+      </a>
+    </div>
+  </section>
+
   <section id="contact" class="contact container">
-  <h2 class="contact-title">Contact</h2>
-  <div class="contact-details">
-    <p>Email: <a href="mailto:karllexterdulce@gmail.com">karllexterdulce@gmail.com</a></p>
-    <p>LinkedIn: <a href="https://www.linkedin.com/in/karl-dulce-276a59287/" target="_blank">Karl Dulce</a></p>
-  </div>
-</section>
+    <h2 class="contact-title">Contact</h2>
+    <div class="contact-details">
+      <p>Email: <a href="mailto:karllexterdulce@gmail.com">karllexterdulce@gmail.com</a></p>
+      <p>LinkedIn: <a href="https://www.linkedin.com/in/karl-dulce-276a59287/" target="_blank">Karl Dulce</a></p>
+    </div>
+  </section>
 
   <script>
     window.addEventListener("scroll", function() {
