--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
     <h2 class="contact-title">Contact</h2>
     <div class="contact-details">
       <p>Email: <a href="mailto:karllexterdulce@gmail.com">karllexterdulce@gmail.com</a></p>
-      <p>LinkedIn: <a href="https://www.linkedin.com/in/karl-dulce-276a59287/" target="_blank">Karl Lexter Dulce</a></p>
+      <p>LinkedIn: <a href="https://www.linkedin.com/in/karl-dulce-276a59287/" target="_blank">Karl Dulce</a></p>
     </div>
   </section>
 
