--- a/index.html
+++ b/index.html
@@ -1,85 +1,79 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Karl's Portfolio</title>
-<link rel="stylesheet" href="style.css?v=2">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Karl's Portfolio</title>
+  <link rel="stylesheet" href="style.css?v=2">
 </head>
 <body>
-<header id="top">
-<nav class="top-nav">
-<a href="#top">Home</a>
-<a href="#projects">Projects/Works</a>
-<a href="#contact">Contacts</a>
-</nav>
-<div class="banner-text">
-<h1>Hi, I'm Karl</h1>
-<h2>Welcome to my portfolio website</h2>
-</div>
-</header>
+  <header id="top">
+    <nav class="top-nav">
+      <a href="#top">Home</a>
+      <a href="#projects">Projects/Works</a>
+      <a href="#contact">Contacts</a>
+    </nav>
+    <div class="banner-text">
+      <h1>Hi, I'm Karl</h1>
+      <h2>Welcome to my portfolio website</h2>
+    </div>
+  </header>
 
-<section id="about" class="about">
-<div class="about-container">
-<div class="about-photo">
-<img src="images/karl-photo.jpg" alt="Portrait of Karl">
-</div>
-<div class="about-text">
-<h2>About Me</h2>
-<p>
-I am a third-year college student majoring in English Language Studies. Ever since grade school, I’ve had a deep passion for the arts, whether it’s writing, drawing (digital or traditional), or editing photos and videos. Even though these are my creative pursuits, I am also eager to explore new horizons in other fields.
-</p>
-<p>
-My strengths include brainstorming, analyzing, and collaborating with a team. I have consistently shown my leadership skills since my elementary years, and alongside these skills, I remain committed to my academics. In senior high school, I graduated with high honors, and in college, I have been a consistent President’s Lister where I maintained a GWA of 1.11 in my sophomore year.
-</p>
-<p>
-These are just a glimpse of my skills and experiences. If you’d like to know more about what I’ve done so far, you can check out my full <a href="#cv" class="cv-link">Curriculum Vitae</a>.
-</p>
-</div>
-</div>
-</section>
+  <section id="about" class="about">
+    <div class="about-container">
+      <div class="about-photo">
+        <img src="images/karl-photo.jpg" alt="Portrait of Karl">
+      </div>
+      <div class="about-text">
+        <h2>About Me</h2>
+        <p>
+          I am a third-year college student majoring in English Language Studies. Ever since grade school, I’ve had a deep passion for the arts, whether it’s writing, drawing (digital or traditional), or editing photos and videos. Even though these are my creative pursuits, I am also eager to explore new horizons in other fields.
+        </p>
+        <p>
+          My strengths include brainstorming, analyzing, and collaborating with a team. I have consistently shown my leadership skills since my elementary years, and alongside these skills, I remain committed to my academics. In senior high school, I graduated with high honors, and in college, I have been a consistent President’s Lister where I maintained a GWA of 1.11 in my sophomore year.
+        </p>
+        <p>
+          These are just a glimpse of my skills and experiences. If you’d like to know more about what I’ve done so far, you can check out my full <a href="cv.html" class="cv-link">Curriculum Vitae</a>.
+        </p>
+      </div>
+    </div>
+  </section>
 
-<section id="projects" class="projects container">
-<h2 class="projects-title">Projects</h2>
-<div class="projects-grid">
-<a href="#" class="project-card">
-<h3>Writing</h3>
-<p>My written works: essays and poems.</p>
-</a>
-<a href="artworks.html" class="project-card">
-<h3>Artwork</h3>
-<p>Drawings, both digital and traditional.</p>
-</a>
-<a href="#" class="project-card">
-<h3>Designs</h3>
-<p>Publication materials and creative PowerPoints.</p>
-</a>
-</div>
-</section>
+  <section id="projects" class="projects container">
+    <h2 class="projects-title">Projects</h2>
+    <div class="projects-grid">
+      <a href="#" class="project-card">
+        <h3>Writing</h3>
+        <p>My written works: essays and poems.</p>
+      </a>
+      <a href="artworks.html" class="project-card">
+        <h3>Artwork</h3>
+        <p>Drawings, both digital and traditional.</p>
+      </a>
+      <a href="#" class="project-card">
+        <h3>Designs</h3>
+        <p>Publication materials and creative PowerPoints.</p>
+      </a>
+    </div>
+  </section>
 
-<section id="contact" class="contact container">
+  <section id="contact" class="contact container">
     <h2 class="contact-title">Contact</h2>
     <div class="contact-details">
       <p>Email: <a href="mailto:karllexterdulce@gmail.com">karllexterdulce@gmail.com</a></p>
-      <p>LinkedIn: <a href="https://www.linkedin.com/in/karl-dulce-276a59287/">karl-dulce-276a59287</a></p>
+      <p>LinkedIn: <a href="https://www.linkedin.com/in/karl-dulce-276a59287/" target="_blank">Karl Dulce</a></p>
     </div>
   </section>
-  <h2 class="contact-title">Contact</h2>
-  <div class="contact-details">
-    <p>Email: <a href="mailto:karllexterdulce@gmail.com">karllexterdulce@gmail.com</a></p>
-    <p>LinkedIn: <a href="https://www.linkedin.com/in/karl-dulce-276a59287/" target="_blank">Karl Dulce</a></p>
-  </div>
-</section>
 
-<script>
-window.addEventListener("scroll", function() {
-const nav = document.querySelector(".top-nav");
-nav.classList.toggle("scrolled", window.scrollY > 50);
-});
-</script>
+  <script>
+    window.addEventListener("scroll", function() {
+      const nav = document.querySelector(".top-nav");
+      nav.classList.toggle("scrolled", window.scrollY > 50);
+    });
+  </script>
 
-<footer>
-<p>© 2025 Karl. All rights reserved.</p>
-</footer>
+  <footer>
+    <p>© 2025 Karl. All rights reserved.</p>
+  </footer>
 </body>
 </html>
