--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <nav class="top-nav">
       <a href="#top">Home</a>
       <a href="#projects">Projects/Works</a>
+      <a href="#cv">Curriculum Vitae</a>
       <a href="#contact">Contacts</a>
     </nav>
     <div class="banner-text">
@@ -33,7 +34,7 @@
           My strengths include brainstorming, analyzing, and collaborating with a team. I have consistently shown my leadership skills since my elementary years, and alongside these skills, I remain committed to my academics. In senior high school, I graduated with high honors, and in college, I have been a consistent President’s Lister where I maintained a GWA of 1.11 in my sophomore year.
         </p>
         <p>
-          These are just a glimpse of my skills and experiences. If you’d like to know more about what I’ve done so far, you can check out my full Curriculum Vitae.
+          These are just a glimpse of my skills and experiences. If you’d like to know more about what I’ve done so far, you can check out my full Curriculum Vitae below.
         </p>
       </div>
     </div>
@@ -53,6 +54,19 @@
       <a href="#" class="project-card">
         <h3>Designs</h3>
         <p>Publication materials and creative PowerPoints.</p>
+      </a>
+    </div>
+  </section>
+
+  <!-- Curriculum Vitae Section -->
+  <section id="cv" class="cv container">
+    <h2 class="cv-title">Curriculum Vitae</h2>
+    <div class="cv-grid">
+      <a href="images/cv-page1.jpg" target="_blank">
+        <img src="images/cv-page1.jpg" alt="Curriculum Vitae Page 1">
+      </a>
+      <a href="images/cv-page2.jpg" target="_blank">
+        <img src="images/cv-page2.jpg" alt="Curriculum Vitae Page 2">
       </a>
     </div>
   </section>
