--- a/cv.html
+++ b/cv.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <!-- Back Button -->
-  <a href="index.html" class="back-button">← Back</a>
+  <a href="index.html" class="back-button">Back</a>
 
   <!-- CV Section -->
   <section class="cv-container">
