--- a/cv.html
+++ b/cv.html
@@ -8,20 +8,20 @@
 </head>
 <body>
   <!-- Back Button -->
-  <a href="index.html" class="back-button">Back</a>
+  <a href="index.html" class="back-button">← Back</a>
 
   <!-- CV Section -->
   <section class="cv-container">
     <h2 class="cv-title">Curriculum Vitae</h2>
-    <div class="cv-grid">
-      <img src="images/curriculumvitae1.jpg" alt="Curriculum Vitae Page 1">
-      <img src="images/curriculumvitae2.jpg" alt="Curriculum Vitae Page 2">
+    <div class="cv-slider">
+      <div class="cv-page">
+        <img src="images/curriculumvitae1.jpg" alt="Curriculum Vitae Page 1">
+      </div>
+      <div class="cv-page">
+        <img src="images/curriculumvitae2.jpg" alt="Curriculum Vitae Page 2">
+      </div>
     </div>
   </section>
 
-  <!-- Footer -->
-  <footer>
-    <p>&copy; 2025 Karl Lexter Dulce. All rights reserved.</p>
-  </footer>
 </body>
 </html>
