--- a/cv.html
+++ b/cv.html
@@ -7,21 +7,26 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
+
   <!-- Back Button -->
   <a href="index.html" class="back-button">← Back</a>
 
   <!-- CV Section -->
   <section class="cv-container">
     <h2 class="cv-title">Curriculum Vitae</h2>
-    <div class="cv-slider">
-      <div class="cv-page">
+    <div class="cv-grid">
+      <a href="images/curriculumvitae1.jpg" target="_blank">
         <img src="images/curriculumvitae1.jpg" alt="Curriculum Vitae Page 1">
-      </div>
-      <div class="cv-page">
+      </a>
+      <a href="images/curriculumvitae2.jpg" target="_blank">
         <img src="images/curriculumvitae2.jpg" alt="Curriculum Vitae Page 2">
-      </div>
+      </a>
     </div>
   </section>
+
+  <footer>
+    <p>&copy; 2025 Karl Lexter Dulce. All rights reserved.</p>
+  </footer>
 
 </body>
 </html>
