--- a/cv.html
+++ b/cv.html
@@ -3,30 +3,54 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Curriculum Vitae</title>
-  <link rel="stylesheet" href="style.css">
+  <title>Karl's CV</title>
+  <link rel="stylesheet" href="style.css?v=2">
 </head>
 <body>
-
-  <!-- Back Button -->
-  <a href="index.html" class="back-button">← Back</a>
-
-  <!-- CV Section -->
   <section class="cv-container">
     <h2 class="cv-title">Curriculum Vitae</h2>
     <div class="cv-grid">
-      <a href="images/curriculumvitae1.jpg" target="_blank">
-        <img src="images/curriculumvitae1.jpg" alt="Curriculum Vitae Page 1">
+      <a href="images/cv-page1.jpg" class="cv-thumb">
+        <img src="images/cv-page1.jpg" alt="CV Page 1">
       </a>
-      <a href="images/curriculumvitae2.jpg" target="_blank">
-        <img src="images/curriculumvitae2.jpg" alt="Curriculum Vitae Page 2">
+      <a href="images/cv-page2.jpg" class="cv-thumb">
+        <img src="images/cv-page2.jpg" alt="CV Page 2">
       </a>
     </div>
   </section>
 
-  <footer>
-    <p>&copy; 2025 Karl Lexter Dulce. All rights reserved.</p>
-  </footer>
+  <!-- Lightbox Overlay -->
+  <div id="cv-lightbox" class="cv-lightbox">
+    <span class="close-btn">&times;</span>
+    <img class="lightbox-img" src="" alt="Full CV Page">
+  </div>
 
+  <script>
+    // Lightbox logic
+    const lightbox = document.getElementById("cv-lightbox");
+    const lightboxImg = document.querySelector(".lightbox-img");
+    const thumbs = document.querySelectorAll(".cv-thumb img");
+    const closeBtn = document.querySelector(".close-btn");
+
+    thumbs.forEach(thumb => {
+      thumb.addEventListener("click", e => {
+        lightbox.style.display = "flex";
+        lightboxImg.src = e.target.src;
+      });
+    });
+
+    closeBtn.addEventListener("click", () => {
+      lightbox.style.display = "none";
+      lightboxImg.src = "";
+    });
+
+    // Close when clicking outside the image
+    lightbox.addEventListener("click", e => {
+      if (e.target === lightbox) {
+        lightbox.style.display = "none";
+        lightboxImg.src = "";
+      }
+    });
+  </script>
 </body>
 </html>
