--- a/cv.html
+++ b/cv.html
@@ -10,11 +10,11 @@
   <section class="cv-container">
     <h2 class="cv-title">Curriculum Vitae</h2>
     <div class="cv-grid">
-      <a href="images/curriculumvitae1.jpg" class="cv-thumb">
-        <img src="images/curriculumvitae1.jpg" alt="CV Page 1">
+      <a href="images/cv-page1.jpg" class="cv-thumb">
+        <img src="images/cv-page1.jpg" alt="CV Page 1">
       </a>
-      <a href="images/curriculumvitae2.jpg" class="cv-thumb">
-        <img src="images/curriculumvitae2.jpg" alt="CV Page 2">
+      <a href="images/cv-page2.jpg" class="cv-thumb">
+        <img src="images/cv-page2.jpg" alt="CV Page 2">
       </a>
     </div>
   </section>
