--- a/cv.html
+++ b/cv.html
@@ -1,56 +1,189 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Karl's CV</title>
-  <link rel="stylesheet" href="style.css?v=2">
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Karl's CV</title>
+<link rel="stylesheet" href="style.css">
+<style>
+/* ===== CV Section ===== */
+.cv-container {
+  max-width: 900px;
+  margin: 60px auto;
+  padding: 20px;
+  text-align: center;
+}
+
+.cv-title {
+  font-family: 'Times New Roman', Times, serif;
+  margin-bottom: 20px;
+  font-size: 28px;
+  color: #fff;
+}
+
+.cv-grid {
+  display: flex;
+  justify-content: center;
+  gap: 20px;
+  flex-wrap: wrap;
+}
+
+.cv-grid a {
+  display: block;
+  cursor: pointer;
+}
+
+.cv-grid img {
+  width: 45%;
+  height: auto;
+  border-radius: 10px;
+  box-shadow: 0 8px 20px rgba(0,0,0,0.3);
+  transition: transform 0.3s ease, opacity 0.4s ease;
+}
+
+.cv-grid img:hover {
+  transform: scale(1.05);
+  opacity: 0.9;
+}
+
+/* Lightbox Overlay */
+.cv-lightbox {
+  display: none;
+  position: fixed;
+  inset: 0;
+  background: rgba(0,0,0,0.95);
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  z-index: 2000;
+}
+
+.cv-lightbox img {
+  max-width: 90%;
+  max-height: 80%;
+  border-radius: 10px;
+  box-shadow: 0 8px 20px rgba(0,0,0,0.5);
+  margin-bottom: 20px;
+}
+
+/* Buttons */
+.cv-lightbox .close-btn,
+.cv-lightbox .prev-btn,
+.cv-lightbox .next-btn,
+.back-button {
+  position: absolute;
+  background: rgba(0,0,0,0.6);
+  color: #fff;
+  text-decoration: none;
+  padding: 8px 14px;
+  border-radius: 6px;
+  font-family: Arial, sans-serif;
+  font-size: 14px;
+  cursor: pointer;
+  transition: background 0.3s ease;
+  z-index: 2100;
+}
+
+.cv-lightbox .close-btn:hover,
+.cv-lightbox .prev-btn:hover,
+.cv-lightbox .next-btn:hover,
+.back-button:hover {
+  background: rgba(0,0,0,0.8);
+}
+
+.back-button {
+  top: 20px;
+  left: 20px;
+}
+
+.cv-lightbox .close-btn {
+  top: 20px;
+  right: 20px;
+}
+
+.cv-lightbox .prev-btn {
+  left: 20px;
+  bottom: 20px;
+}
+
+.cv-lightbox .next-btn {
+  right: 20px;
+  bottom: 20px;
+}
+</style>
 </head>
 <body>
-  <section class="cv-container">
-    <h2 class="cv-title">Curriculum Vitae</h2>
-    <div class="cv-grid">
-      <a href="images/cv-page1.jpg" class="cv-thumb">
-        <img src="images/cv-page1.jpg" alt="CV Page 1">
-      </a>
-      <a href="images/cv-page2.jpg" class="cv-thumb">
-        <img src="images/cv-page2.jpg" alt="CV Page 2">
-      </a>
-    </div>
-  </section>
 
-  <!-- Lightbox Overlay -->
-  <div id="cv-lightbox" class="cv-lightbox">
-    <span class="close-btn">&times;</span>
-    <img class="lightbox-img" src="" alt="Full CV Page">
+<a href="index.html" class="back-button">Back</a>
+
+<div class="cv-container">
+  <h2 class="cv-title">Curriculum Vitae</h2>
+  <div class="cv-grid">
+    <a href="#" data-page="0"><img src="images/cv-page1.jpg" alt="CV Page 1"></a>
+    <a href="#" data-page="1"><img src="images/cv-page2.jpg" alt="CV Page 2"></a>
   </div>
+</div>
 
-  <script>
-    // Lightbox logic
-    const lightbox = document.getElementById("cv-lightbox");
-    const lightboxImg = document.querySelector(".lightbox-img");
-    const thumbs = document.querySelectorAll(".cv-thumb img");
-    const closeBtn = document.querySelector(".close-btn");
+<div class="cv-lightbox">
+  <span class="close-btn">✕</span>
+  <img src="" alt="CV Full Page" class="lightbox-img">
+  <span class="prev-btn">Previous Page</span>
+  <span class="next-btn">Next Page</span>
+</div>
 
-    thumbs.forEach(thumb => {
-      thumb.addEventListener("click", e => {
-        lightbox.style.display = "flex";
-        lightboxImg.src = e.target.src;
-      });
-    });
+<script>
+const lightbox = document.querySelector('.cv-lightbox');
+const lightboxImg = document.querySelector('.lightbox-img');
+const closeBtn = document.querySelector('.close-btn');
+const prevBtn = document.querySelector('.prev-btn');
+const nextBtn = document.querySelector('.next-btn');
+const cvPages = document.querySelectorAll('.cv-grid a img');
 
-    closeBtn.addEventListener("click", () => {
-      lightbox.style.display = "none";
-      lightboxImg.src = "";
-    });
+let currentPage = 0;
 
-    // Close when clicking outside the image
-    lightbox.addEventListener("click", e => {
-      if (e.target === lightbox) {
-        lightbox.style.display = "none";
-        lightboxImg.src = "";
-      }
-    });
-  </script>
+function showLightbox(pageIndex) {
+  currentPage = pageIndex;
+  lightboxImg.src = cvPages[currentPage].src;
+  lightbox.style.display = 'flex';
+  updateButtons();
+}
+
+function updateButtons() {
+  prevBtn.style.display = currentPage === 0 ? 'none' : 'block';
+  nextBtn.style.display = currentPage === cvPages.length - 1 ? 'none' : 'block';
+}
+
+// Click on grid images
+cvPages.forEach((img, index) => {
+  img.parentElement.addEventListener('click', (e) => {
+    e.preventDefault();
+    showLightbox(index);
+  });
+});
+
+// Close lightbox
+closeBtn.addEventListener('click', () => {
+  lightbox.style.display = 'none';
+});
+
+// Previous page
+prevBtn.addEventListener('click', () => {
+  if (currentPage > 0) {
+    currentPage--;
+    lightboxImg.src = cvPages[currentPage].src;
+    updateButtons();
+  }
+});
+
+// Next page
+nextBtn.addEventListener('click', () => {
+  if (currentPage < cvPages.length - 1) {
+    currentPage++;
+    lightboxImg.src = cvPages[currentPage].src;
+    updateButtons();
+  }
+});
+</script>
+
 </body>
 </html>
