--- a/cv.html
+++ b/cv.html
@@ -114,7 +114,7 @@
 </head>
 <body>
 
-<a href="index.html" class="back-button">Back</a>
+<a href="index.html" class="back-button">Back to Home</a>
 
 <div class="cv-container">
   <h2 class="cv-title">Curriculum Vitae</h2>
