--- a/cv.html
+++ b/cv.html
@@ -119,14 +119,16 @@
 <div class="cv-container">
   <h2 class="cv-title">Curriculum Vitae</h2>
   <div class="cv-grid">
-    <!-- Page 1 -->
-    <a href="#" data-page="0">
-      <img src="images/cv-page1.jpg" alt="CV Page 1">
-    </a>
-    <!-- Page 2 -->
-    <a href="#" data-page="1">
-      <img src="images/cv-page2.jpg" alt="CV Page 2">
-    </a>
+    <div class="cv-page">
+      <a href="#" data-page="0">
+        <img src="images/cv-page1.jpg" alt="CV Page 1">
+      </a>
+    </div>
+    <div class="cv-page">
+      <a href="#" data-page="1">
+        <img src="images/cv-page2.jpg" alt="CV Page 2">
+      </a>
+    </div>
   </div>
 </div>
 
