--- a/cv.html
+++ b/cv.html
@@ -121,11 +121,15 @@
   <div class="cv-grid">
     <!-- Page 1 -->
     <div class="cv-page">
-      <img src="images/cv-page1.jpg" alt="CV Page 1">
+      <a href="#" data-page="0">
+        <img src="images/cv-page1.jpg" alt="CV Page 1">
+      </a>
     </div>
     <!-- Page 2 -->
     <div class="cv-page">
-      <img src="images/cv-page2.jpg" alt="CV Page 2">
+      <a href="#" data-page="1">
+        <img src="images/cv-page2.jpg" alt="CV Page 2">
+      </a>
     </div>
   </div>
 </div>
