--- a/artworks.html
+++ b/artworks.html
@@ -12,10 +12,12 @@
   <a href="index.html" class="back-button">Back</a>
 
   <!-- Banner -->
-  <header class="gallery-header">
-    <h1>Artworks</h1>
-    <p>This is my gallery of artworks in digital and traditional media.</p>
-  </header>
+  <header class="artworks-header">
+  <div class="banner-text">
+    <h1>Artwork</h1>
+    <h2>This is my gallery of artworks</h2>
+  </div>
+</header>
 
   <!-- Gallery -->
   <main class="gallery-container">
