--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Karl's Portfolio</title>
-  <link rel="stylesheet" href="style.css?v=2">
+  <link rel="stylesheet" href="style.css?v=3">
 </head>
 <body>
   <!-- Header / Banner -->
   <header id="top">
-    <nav class="top-nav">
+    <nav class="top-nav" aria-label="Main navigation">
       <a href="#top">Home</a>
       <a href="#projects">Projects/Works</a>
       <a href="#contact">Contacts</a>
@@ -17,7 +17,7 @@
     </nav>
     <div class="banner-text">
       <h1>Hi, I'm Karl</h1>
-      <h2>Welcome to my portfolio website</h2>
+      <p>Welcome to my portfolio website</p>
     </div>
   </header>
 
@@ -36,7 +36,8 @@
           My strengths include brainstorming, analyzing, and collaborating with a team. I have consistently shown my leadership skills since my elementary years, and alongside these skills, I remain committed to my academics. In senior high school, I graduated with high honors, and in college, I have been a consistent President’s Lister where I maintained a GWA of 1.11 in my sophomore year.
         </p>
         <p>
-          To see my full experiences and achievements, you can check out my <a href="cv.html" class="cv-link">Curriculum Vitae</a>.
+          To see my full experiences and achievements, you can check out my 
+          <a href="cv.html" class="cv-link">Curriculum Vitae</a>.
         </p>
       </div>
     </div>
@@ -46,15 +47,15 @@
   <section id="projects" class="projects container">
     <h2 class="projects-title">Projects</h2>
     <div class="projects-grid">
-      <a href="#" class="project-card">
+      <a href="#" class="project-card" aria-label="View my writing works">
         <h3>Writing</h3>
         <p>My written works: essays and poems.</p>
       </a>
-      <a href="artworks.html" class="project-card">
+      <a href="artworks.html" class="project-card" aria-label="View my artworks">
         <h3>Artwork</h3>
         <p>Drawings, both digital and traditional.</p>
       </a>
-      <a href="#" class="project-card">
+      <a href="#" class="project-card" aria-label="View my designs">
         <h3>Designs</h3>
         <p>Publication materials and creative PowerPoints.</p>
       </a>
@@ -65,10 +66,21 @@
   <section id="contact" class="contact container">
     <h2 class="contact-title">Contact</h2>
     <div class="contact-details">
-      <p>Email: <a href="mailto:karllexterdulce@gmail.com">karllexterdulce@gmail.com</a></p>
-      <p>LinkedIn: <a href="https://www.linkedin.com/in/karl-dulce-276a59287/" target="_blank">Karl Dulce</a></p>
+      <p>Email: 
+        <a href="mailto:karllexterdulce@gmail.com">karllexterdulce@gmail.com</a>
+      </p>
+      <p>LinkedIn: 
+        <a href="https://www.linkedin.com/in/karl-dulce-276a59287/" target="_blank" rel="noopener noreferrer">
+          Karl Dulce
+        </a>
+      </p>
     </div>
   </section>
+
+  <!-- Footer -->
+  <footer>
+    <p>© <span id="year"></span> Karl. All rights reserved.</p>
+  </footer>
 
   <!-- Scroll Script -->
   <script>
@@ -76,11 +88,9 @@
       const nav = document.querySelector(".top-nav");
       nav.classList.toggle("scrolled", window.scrollY > 50);
     });
-  </script>
 
-  <!-- Footer -->
-  <footer>
-    <p>© 2025 Karl. All rights reserved.</p>
-  </footer>
+    // Dynamic year in footer
+    document.getElementById("year").textContent = new Date().getFullYear();
+  </script>
 </body>
 </html>
